--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Patrick 'rodpadev' Rodrigues",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.10.2",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0"
